--- a/app/index.html
+++ b/app/index.html
@@ -50,15 +50,7 @@
 									</li>
 								</ul>
 							</nav>
-							<div class="hambg__menu">
-								<div class="hambg__menu-block">
-									<div class="hambg__menu-block__inner">
-										<div class="hambg__line"></div>
-										<div class="hambg__line"></div>
-										<div class="hambg__line"></div>
-									</div>
-								</div>
-							</div>
+							
 						</div>
 					</div>
 				</header>
@@ -83,36 +75,45 @@
 					<img src="img/icons/arrow-scroll.svg" alt="стрелка вниз" class="arrow__down">
 				</div>
 			</div>
-			<div class="menu__popup">
-				<div class="menu__popup-inner">
-					<div class="header__logo-img menu__popup-logo">
-						<img src="img/icons/logo.svg" alt="логотип компании Mr.Burger">
-					</div>
-					<img class="menu__popup-close" src="./img/icons/close__button.svg" alt="кнопка закрытия меню">
-					<ul class="menu__popup-list">
-						<li class="menu__popup-item">
-							<a class="menu__popup-link" href="#about_us">О нас</a>
-						</li>
-						<li class="menu__popup-item">
-							<a class="menu__popup-link" href="#burgers_slider">Бургеры</a>
-						</li>
-						<li class="menu__popup-item">
-							<a class="menu__popup-link" href="#our_team">Команда</a>
-						</li>
-						<li class="menu__popup-item">
-							<a class="menu__popup-link" href="#menu_types">Меню</a>
-						</li>
-						<li class="menu__popup-item">
-							<a class="menu__popup-link" href="#reviews">Отзывы</a>
-						</li>
-						<li class="menu__popup-item">
-							<a class="menu__popup-link" href="#on_map">На карте</a>
-						</li>
-					</ul>
+			
+		</section>
+		<div class="hambg__menu">
+			<div class="hambg__menu-block">
+				<div class="hambg__menu-block__inner">
+					<div class="hambg__line"></div>
+					<div class="hambg__line"></div>
+					<div class="hambg__line"></div>
 				</div>
 			</div>
-		</section>
-
+		</div>
+		<div class="menu__popup">
+			<div class="menu__popup-inner">
+				<div class="header__logo-img menu__popup-logo">
+					<img src="img/icons/logo.svg" alt="логотип компании Mr.Burger">
+				</div>
+				<img class="menu__popup-close" src="./img/icons/close__button.svg" alt="кнопка закрытия меню">
+				<ul class="menu__popup-list">
+					<li class="menu__popup-item">
+						<a class="menu__popup-link" href="#about_us">О нас</a>
+					</li>
+					<li class="menu__popup-item">
+						<a class="menu__popup-link" href="#burgers_slider">Бургеры</a>
+					</li>
+					<li class="menu__popup-item">
+						<a class="menu__popup-link" href="#our_team">Команда</a>
+					</li>
+					<li class="menu__popup-item">
+						<a class="menu__popup-link" href="#menu_types">Меню</a>
+					</li>
+					<li class="menu__popup-item">
+						<a class="menu__popup-link" href="#reviews">Отзывы</a>
+					</li>
+					<li class="menu__popup-item">
+						<a class="menu__popup-link" href="#on_map">На карте</a>
+					</li>
+				</ul>
+			</div>
+		</div>
 		<section class="we_best__block section" id="about_us">
 			<div class="container we_best__container">
 				<div class="we_best__block__heading">
@@ -839,7 +840,7 @@
 	<script src="./js/menu-acco.js"></script>
 	<script src="./js/slider-burger.js"></script>
 	<script src="./js/jquery.mousewheel.min.js"></script>
-	<script src="./js/one-page-scroll.js"></script>
+	<!-- <script src="./js/one-page-scroll.js"></script> -->
 </body>
 
 </html>
