--- a/app/index.html
+++ b/app/index.html
@@ -839,7 +839,7 @@
 	<script src="./js/team-acco.js"></script>
 	<script src="./js/menu-acco.js"></script>
 	<script src="./js/slider-burger.js"></script>
-	<script src="./js/jquery.mousewheel.min.js"></script>
+	<!-- <script src="./js/jquery.mousewheel.min.js"></script> -->
 	<!-- <script src="./js/one-page-scroll.js"></script> -->
 </body>
 
