--- a/app/index.html
+++ b/app/index.html
@@ -179,7 +179,7 @@
 											Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами,
 											луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
 										</p>
-										<span class="section__title section_title_burger_price">500</span>
+										<span class="section__title section_title_burger_price">350</span>
 										<button class="slider__text-btn" type="button">заказать</button>
 									</div>
 								</div>
@@ -303,7 +303,7 @@
 											Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами,
 											луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
 										</p>
-										<span class="section__title section_title_burger_price">500</span>
+										<span class="section__title section_title_burger_price">299</span>
 										<button class="slider__text-btn" type="button">заказать</button>
 									</div>
 								</div>
@@ -365,7 +365,7 @@
 											Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами,
 											луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
 										</p>
-										<span class="section__title section_title_burger_price">500</span>
+										<span class="section__title section_title_burger_price">399</span>
 										<button class="slider__text-btn" type="button">заказать</button>
 									</div>
 								</div>
@@ -840,6 +840,7 @@
 
 	<script src="./js/maps-settings.js"></script>
 	<script src="./js/jquery-3.3.1.min.js"></script>
+	<script src="./js/jquery.touchSwipe.min.js"></script>
 	<script src="./js/popup-menu.js"></script>
 	<script src="./js/reviews-modal.js"></script>
 	<script src="./js/team-acco.js"></script>
